<resources>
    <string name="app_name" translatable="false">CinemaATL</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="search_movies">Search Movies...</string>
    <string name="top_movies">Top Movies</string>
    <string name="imageposter">imagePoster</string>
    <string name="buy_ticket_button">Buy Ticket</string>
    <string name="intro_description">Dsadasd asdasdas klklklk ksdlkslkd klk klkklklk asdasdasdasdas sdasd asdas /n sdsad sadasdasdasdasd</string>
    <string name="get_started_button">Get Started</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Sign In</string>
    <string name="back_to_register_button">Sign Up</string>
    <string name="register">Registration</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="repeat_password_register">Repeat password</string>
    <string name="nickname_register">Nickname</string>
    <string name="register_button">Sign Up</string>
    <string name="go_to_login_button">Go to login</string>
    <string name="search_movies_hint">Search Movies...</string>
    <string name="selected_seats">Selected Seats:</string>
    <string name="aviable">Aviable</string>
    <string name="selected">Selected</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="titleForTicketFragment">Once you buy a movie ticket simply scan the barcode to access to your movie.</string>
    <string name="return_to_cinema_list_button">Return to Cinema List</string>
    <string name="my_ticket_profile">My ticket</string>
    <string name="payment_history_profile">Payment history</string>
    <string name="change_language_profile">Change language</string>
    <string name="logout_profile">Logout</string>
    <string name="change_password_profile">Change password</string>
    <string name="hi">Hi,</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="my_ticket">My Ticket</string>
    <string name="total_price">Total Price:</string>
    <string name="unaviable">Unaviable</string>
    <string name="close_dialog">Close</string>
    <string name="hi_with_name">Hi, %1$s</string>
    <string name="total_price_seats">Total price: %1$s $</string>
    <string name="selected_seats_total">Selected seats: %1$s</string>
    <string name="row_inticket">Row: %1$s</string>
    <string name="payment_finish_after_seconds">Payment finish after: %1$s seconds</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="now_playing">Now Playing</string>
    <string name="delete_dialog">Delete</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="are_you_sure_dialog">Are you sure you want to delete this ticket?</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="password_is_not_correct">Password is not correct</string>
    <string name="password_is_not_matched">Password is not matched</string>
    <string name="this_field_cannot_be_empty">"This field cannot be empty "</string>
    <string name="email_is_not_correct">Email is not correct</string>
    <string name="firebase_email_conflict">This email already in use</string>
    <string name="ticket_success_description">We have sent a copy of your ticket to your e-mail address. You can check your ticket in the My Tickets section on the homepage.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="view_ticket">View Ticket</string>
    <string name="logout_confimation">Logout Confimation</string>
    <string name="are_you_sure_to_sign_out">Are you sure  to sign out?</string>
    <string name="sign_out_dialog">Sign out</string>
    <string name="stay_dialog">Stay</string>
    <string name="firebase_credential_conflict">Email or password incorrect</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email_lenght">Email must be at least 8 characters long</string>
    <string name="password_length">Password must be at least 8 characters long</string>
    <string name="invalid_mail">Invalid email format</string>
    <string name="nicmname_empty">Nickname cannot be empty</string>
    <string name="min">min</string>
</resources>