<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="12dp"
    android:paddingTop="32dp"
    android:paddingBottom="8dp">

    <!-- Имя -->
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Angelina" />

    <!-- Email -->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#B0BEC5"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="angelina@example.com" />

    <!-- My Tickets -->
    <TextView
        android:id="@+id/my_ticket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ticket_3"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="12dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/my_ticket_profile"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <!-- Payment History -->
    <TextView
        android:id="@+id/payment_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/shopping_cart"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="12dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/payment_history_profile"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_ticket" />

    <!-- Change Language -->
    <TextView
        android:id="@+id/change_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/translate"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="12dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/change_language_profile"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_history" />

    <!-- Change Password -->
    <TextView
        android:id="@+id/change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="12dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/change_password_profile"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_language" />

    <!-- Logout -->
    <TextView
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_logout"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="12dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/logout_profile"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password" />

</androidx.constraintlayout.widget.ConstraintLayout>