<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.success.PaymentSuccess">

  <ImageView
      android:id="@+id/complete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_complete256"
      android:layout_marginBottom="200dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      />

    <TextView
        android:id="@+id/tvPayment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Payment Successful"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ticket_success_description"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintTop_toBottomOf="@id/tvPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btViewTicket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_ticket"
        android:textColor="@color/black"
        android:paddingVertical="12dp"
        android:layout_margin="40dp"
        android:background="@drawable/gold_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btBackHome"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btBackHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:textColor="@color/black"
        android:background="@drawable/gold_bg"
        android:layout_margin="40dp"
        android:paddingVertical="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>