<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.SeatsFragment">

    <ImageView
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:src="@drawable/back_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/selected_seats"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dateRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelected"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateRecyclerView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"/>



    <ImageView
        android:id="@+id/cinemaView"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/cinema"
        app:layout_constraintBottom_toTopOf="@id/ticketState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="45dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/cinemaView"
        app:layout_constraintEnd_toEndOf="@id/cinemaView"
        app:layout_constraintStart_toStartOf="@id/cinemaView"
        app:layout_constraintTop_toTopOf="@id/cinemaView"
        app:spanCount="7" />

    <LinearLayout
        android:id="@+id/ticketState"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cinemaView">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/ic_seat_aviable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/aviable"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/ic_seat_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selected"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/ic_seat_unaviable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Unaviable"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buyTicket"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/gold_bg"
        android:text="@string/download_ticket"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticketState" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticketState"
        android:layout_margin="28dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/tvCountPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/totalPrice"
        app:layout_constraintStart_toStartOf="@id/totalPrice"
        android:textColor="@color/light_gray"
        android:text=""
        android:textSize="16sp"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>